# trellis-everywhere

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
notes/: qtip-exl3-spec.md
scripts/: export_packed.py  export_packed_8b.py  make_blueprint_gif.py  make_hero_gif.py  make_poster_gif.py  run_eval.py  run_packed_headless.py  run_tcq_eval.py  validate_decode_embed.py  validate_decode_matmul.py  validate_full_packed.py  validate_packed_linear.py  validate_qknorm.py  validate_wgsl.py  verify_all.sh  vram_budget.py
src/trellis/: eval.py  ldlq.py  qtip.py  quant.py  trellis.py  viterbi_triton.py
tests/: test_ldlq.py  test_qtip.py  test_trellis.py  test_triton_kernel.py
web/: index.html  kernels.js  model.js  packed.js  runtime.js  tokenizer.js
